// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClimbingProgressionRepository > calculates date-aligned exposure, partial attempts, grade trends, and hardest ascents 1`] = `
{
  "below_range_hardest_send": {
    "attempts": 1,
    "entries": 1,
    "metric_name": "volume_below_range_hardest_send",
    "status": "partial",
  },
  "coverage": {
    "attempt_data": "partial",
    "entries": 3,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 2,
    "entries_with_observed_outcome": 2,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 2,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": null,
      "attempts_status": "unavailable",
      "consecutive_climbing_days": null,
      "date": "2026-07-09",
      "entries": null,
      "exposure_status": "unavailable",
      "failed_entries": null,
      "is_rest_day": null,
      "observed_outcomes": null,
      "rolling_28d_exposure_days": null,
      "rolling_7d_exposure_days": null,
      "send_rate": null,
      "sends": null,
      "sessions": null,
    },
    {
      "attempts": 1,
      "attempts_status": "partial",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 2,
      "exposure_status": "observed",
      "failed_entries": 0,
      "is_rest_day": false,
      "observed_outcomes": 1,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": 1,
      "sends": 1,
      "sessions": 1,
    },
    {
      "attempts": 0,
      "attempts_status": "complete",
      "consecutive_climbing_days": 0,
      "date": "2026-07-11",
      "entries": 0,
      "exposure_status": "not_observed",
      "failed_entries": 0,
      "is_rest_day": true,
      "observed_outcomes": 0,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": null,
      "sends": 0,
      "sessions": 0,
    },
    {
      "attempts": 5,
      "attempts_status": "complete",
      "consecutive_climbing_days": 1,
      "date": "2026-07-12",
      "entries": 1,
      "exposure_status": "observed",
      "failed_entries": 0,
      "is_rest_day": false,
      "observed_outcomes": 1,
      "rolling_28d_exposure_days": 2,
      "rolling_7d_exposure_days": 2,
      "send_rate": 1,
      "sends": 1,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [
    {
      "attempts": 1,
      "attempts_per_send": 1,
      "attempts_status": "complete",
      "discipline": "boulder",
      "entries": 1,
      "entries_with_attempts": 1,
      "failed_entries": 0,
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 1,
      "send_rate": 1,
      "sends": 1,
    },
    {
      "attempts": null,
      "attempts_per_send": null,
      "attempts_status": "unavailable",
      "discipline": "boulder",
      "entries": 1,
      "entries_with_attempts": 0,
      "failed_entries": null,
      "grade": "V6",
      "grade_sort_value": 72,
      "grade_system": "v_scale",
      "normalized_grade": "V6",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 0,
      "send_rate": null,
      "sends": null,
    },
    {
      "attempts": 5,
      "attempts_per_send": 5,
      "attempts_status": "complete",
      "discipline": "boulder",
      "entries": 1,
      "entries_with_attempts": 1,
      "failed_entries": 0,
      "grade": "V7",
      "grade_sort_value": 75,
      "grade_system": "v_scale",
      "normalized_grade": "V7",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 1,
      "send_rate": 1,
      "sends": 1,
    },
  ],
  "grade_progression": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
    {
      "activity_id": "00000000-0000-4000-8000-000000000002",
      "date": "2026-07-12",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000103",
      "grade": "V7",
      "grade_sort_value": 75,
      "grade_system": "v_scale",
      "normalized_grade": "V7",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  ],
  "hardest": {
    "flash": {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "ascent_type": "Flash",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
    "onsight": null,
    "send": {
      "activity_id": "00000000-0000-4000-8000-000000000002",
      "ascent_type": "Redpoint",
      "date": "2026-07-12",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000103",
      "grade": "V7",
      "grade_system": "v_scale",
      "normalized_grade": "V7",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  },
  "pagination": {
    "has_more": true,
    "limit": 1,
    "next_cursor": "eyJ2ZXJzaW9uIjoxLCJ1c2VySWQiOiIwMDAwMDAwMC0wMDAwLTQwMDAtODAwMC0wMDAwMDAwMDAwMDIiLCJzaGFwZSI6Im1BcWdfNk10TF9MeFkwOHRiNHJRajIiLCJzdGFydGVkQXQiOiIyMDI2LTA3LTEyVDE4OjAwOjAwLjAwMFoiLCJhY3Rpdml0eUlkIjoiMDAwMDAwMDAtMDAwMC00MDAwLTgwMDAtMDAwMDAwMDAwMDAyIn0",
  },
  "range": {
    "end_date": "2026-07-12",
    "start_date": "2026-07-09",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000002",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": 5,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-3",
          "grade": "V7",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000103",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V7",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000103",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-3",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Black Slab",
          "sent": true,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-12",
      "duration_minutes": 60,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-12T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;

exports[`ClimbingProgressionRepository > distinguishes a rest-only range after climbing coverage began from unavailable coverage 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "unavailable",
    "entries": 0,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 0,
    "entries_with_observed_outcome": 0,
    "first_observed_date": "2026-07-01",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 0,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": 0,
      "attempts_status": "complete",
      "consecutive_climbing_days": 0,
      "date": "2026-07-20",
      "entries": 0,
      "exposure_status": "not_observed",
      "failed_entries": 0,
      "is_rest_day": true,
      "observed_outcomes": 0,
      "rolling_28d_exposure_days": 0,
      "rolling_7d_exposure_days": 0,
      "send_rate": null,
      "sends": 0,
      "sessions": 0,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [],
  "grade_progression": [],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": null,
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-20",
    "start_date": "2026-07-20",
    "timezone": "UTC",
  },
  "sessions": [],
}
`;

exports[`ClimbingProgressionRepository > distinguishes a rest-only range after climbing coverage began from unavailable coverage 2`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "unavailable",
    "entries": 0,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 0,
    "entries_with_observed_outcome": 0,
    "first_observed_date": "2026-07-01",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 0,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": 0,
      "attempts_status": "complete",
      "consecutive_climbing_days": 0,
      "date": "2026-07-20",
      "entries": 0,
      "exposure_status": "not_observed",
      "failed_entries": 0,
      "is_rest_day": true,
      "observed_outcomes": 0,
      "rolling_28d_exposure_days": 0,
      "rolling_7d_exposure_days": 0,
      "send_rate": null,
      "sends": 0,
      "sessions": 0,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [],
  "grade_progression": [],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": null,
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-20",
    "start_date": "2026-07-20",
    "timezone": "UTC",
  },
  "sessions": [],
}
`;

exports[`ClimbingProgressionRepository > does not calculate attempts per send from incomplete outcome coverage 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "complete",
    "entries": 2,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 2,
    "entries_with_observed_outcome": 1,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": 5,
      "attempts_status": "complete",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 2,
      "exposure_status": "observed",
      "failed_entries": 0,
      "is_rest_day": false,
      "observed_outcomes": 1,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": 1,
      "sends": 1,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [
    {
      "attempts": 5,
      "attempts_per_send": null,
      "attempts_status": "complete",
      "discipline": "boulder",
      "entries": 2,
      "entries_with_attempts": 2,
      "failed_entries": 0,
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 1,
      "send_rate": 1,
      "sends": 1,
    },
  ],
  "grade_progression": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  ],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "ascent_type": "Redpoint",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-10",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": 3,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-1",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000101",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-1",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": true,
          "wall_angle_degrees": 30,
        },
        {
          "ascent_type": "Redpoint",
          "attempt_count": 2,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-2",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000102",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000102",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-2",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": null,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-10",
      "duration_minutes": 120,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;

exports[`ClimbingProgressionRepository > does not calculate attempts per send from partial grade coverage 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "partial",
    "entries": 2,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 1,
    "entries_with_observed_outcome": 1,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": 3,
      "attempts_status": "partial",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 2,
      "exposure_status": "observed",
      "failed_entries": 0,
      "is_rest_day": false,
      "observed_outcomes": 1,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": 1,
      "sends": 1,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [
    {
      "attempts": 3,
      "attempts_per_send": null,
      "attempts_status": "partial",
      "discipline": "boulder",
      "entries": 2,
      "entries_with_attempts": 1,
      "failed_entries": 0,
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 1,
      "send_rate": 1,
      "sends": 1,
    },
  ],
  "grade_progression": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  ],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "ascent_type": "Redpoint",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
      ],
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-10",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": 3,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-1",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000101",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-1",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": true,
          "wall_angle_degrees": 30,
        },
        {
          "ascent_type": "Redpoint",
          "attempt_count": null,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-2",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000102",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000102",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-2",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": null,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-10",
      "duration_minutes": 120,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;

exports[`ClimbingProgressionRepository > flags identity overlaps with conflicting observations without silently merging them 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "unavailable",
    "entries": 2,
    "entries_excluded_from_aggregates": 2,
    "entries_with_attempts": 0,
    "entries_with_observed_outcome": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 1,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": null,
      "attempts_status": "unavailable",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 2,
      "exposure_status": "observed",
      "failed_entries": null,
      "is_rest_day": false,
      "observed_outcomes": 0,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": null,
      "sends": null,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [],
  "grade_progression": [],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": null,
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-10",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": 3,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-1",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000101",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-1",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": true,
          "wall_angle_degrees": 30,
        },
        {
          "ascent_type": "Redpoint",
          "attempt_count": 4,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "strava-problem-9",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000102",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000012",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000102",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "strava-problem-9",
                "provider": "strava",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "strava",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": false,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-10",
      "duration_minutes": 120,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [
        "possible_overlapping_climbing_entries",
      ],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;

exports[`ClimbingProgressionRepository > merges exact cross-provider entry duplicates once and preserves all evidence 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "complete",
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 1,
    "entries_with_observed_outcome": 1,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 1,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": 3,
      "attempts_status": "complete",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 1,
      "exposure_status": "observed",
      "failed_entries": 0,
      "is_rest_day": false,
      "observed_outcomes": 1,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": 1,
      "sends": 1,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [
    {
      "attempts": 3,
      "attempts_per_send": 3,
      "attempts_status": "complete",
      "discipline": "boulder",
      "entries": 1,
      "entries_with_attempts": 1,
      "failed_entries": 0,
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 1,
      "send_rate": 1,
      "sends": 1,
    },
  ],
  "grade_progression": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
        "strava",
      ],
    },
  ],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "ascent_type": "Redpoint",
      "date": "2026-07-10",
      "discipline": "boulder",
      "entry_id": "00000000-0000-4000-8000-000000000101",
      "grade": "V5",
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "source_providers": [
        "kaya",
        "strava",
      ],
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-10",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": 3,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-1",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000101",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": true,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
              "00000000-0000-4000-8000-000000000012",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
              "00000000-0000-4000-8000-000000000102",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-1",
                "provider": "kaya",
              },
              {
                "external_id": "strava-problem-9",
                "provider": "strava",
              },
            ],
            "source_names": [
              "Kaya",
              "Strava",
            ],
            "source_providers": [
              "kaya",
              "strava",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": true,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-10",
      "duration_minutes": 120,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
        "strava",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;

exports[`ClimbingProgressionRepository > preserves unknown attempts and outcomes rather than treating them as zero or failure 1`] = `
{
  "below_range_hardest_send": {
    "attempts": null,
    "entries": 0,
    "metric_name": "volume_below_range_hardest_send",
    "status": "unavailable",
  },
  "coverage": {
    "attempt_data": "unavailable",
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "entries_with_attempts": 0,
    "entries_with_observed_outcome": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "attempts": null,
      "attempts_status": "unavailable",
      "consecutive_climbing_days": 1,
      "date": "2026-07-10",
      "entries": 1,
      "exposure_status": "observed",
      "failed_entries": null,
      "is_rest_day": false,
      "observed_outcomes": 0,
      "rolling_28d_exposure_days": 1,
      "rolling_7d_exposure_days": 1,
      "send_rate": null,
      "sends": null,
      "sessions": 1,
    },
  ],
  "definitions": {
    "attempts": "Attempt totals use detailed attempt rows when present, otherwise the source aggregate; missing source attempts remain null.",
    "duplicate_handling": "Canonical activity groups count once. Exact matching entries from different member activities/providers are consolidated; conflicting identity matches remain in session detail, are flagged, and are excluded from aggregates.",
    "rolling_exposure": "Count of calendar days containing at least one canonical climbing session in the trailing 7 or 28 days, inclusive.",
    "send_rate": "Observed sends divided by entries with an observed sent/failed outcome.",
    "volume_below_range_hardest_send": "Known attempts on entries graded below the hardest observed send in this requested range; this is a descriptive relative-volume measure, not physiological intensity.",
  },
  "grade_distribution": [
    {
      "attempts": null,
      "attempts_per_send": null,
      "attempts_status": "unavailable",
      "discipline": "boulder",
      "entries": 1,
      "entries_with_attempts": 0,
      "failed_entries": null,
      "grade": "V5",
      "grade_sort_value": 69,
      "grade_system": "v_scale",
      "normalized_grade": "V5",
      "normalized_grade_system": "v_scale",
      "observed_outcomes": 0,
      "send_rate": null,
      "sends": null,
    },
  ],
  "grade_progression": [],
  "hardest": {
    "flash": null,
    "onsight": null,
    "send": null,
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-10",
    "start_date": "2026-07-10",
    "timezone": "America/Los_Angeles",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000001",
      "climbs": [
        {
          "ascent_type": "Redpoint",
          "attempt_count": null,
          "attempts": [],
          "climb_type": "boulder",
          "discipline": "boulder",
          "external_id": "problem-1",
          "grade": "V5",
          "grade_system": "v_scale",
          "hold_type": null,
          "id": "00000000-0000-4000-8000-000000000101",
          "lead": null,
          "location_name": "Pacific Pipe",
          "normalized_grade": "V5",
          "normalized_grade_system": "v_scale",
          "provenance": {
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_external_entry_ids": [
              {
                "external_id": "problem-1",
                "provider": "kaya",
              },
            ],
            "source_names": [
              "Kaya",
            ],
            "source_providers": [
              "kaya",
            ],
            "value_kind": "measured",
          },
          "route_name": "Blue Arete",
          "sent": null,
          "wall_angle_degrees": 30,
        },
      ],
      "date": "2026-07-10",
      "duration_minutes": 120,
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Evening climbing",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "kaya",
          "subsource": "Kaya",
        },
      ],
      "source_providers": [
        "kaya",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "America/Los_Angeles",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
}
`;
